Bug 1765359 - Fix ifdeffery in Wasm signal handling. r=yury

The problem here is that we assumed incorrectly that XP_DARWIN => some JIT.  The
proper solution is to make the signal handling interface inert in the face of nojit.

Differential Revision: https://phabricator.services.mozilla.com/D145533